--- a/Fitnessy/app/src/main/res/layout/activity_login.xml
+++ b/Fitnessy/app/src/main/res/layout/activity_login.xml
@@ -8,12 +8,23 @@
     android:orientation="vertical"
     tools:context=".auth.LoginActivity">
 
-    <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/welcome" />
+    <ImageButton
+        android:id="@+id/arrowBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/arrow_back" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="44dp"
+        android:text="@string/welcome_back_to_fitnessy"
+        android:textColor="@color/black"
+        android:textSize="26sp"
+        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -66,22 +77,20 @@
         android:layout_marginLeft="45dp"
         android:layout_marginTop="10dp"
         android:checked="true"
-        android:text="Remember me next time?"/>
+        android:text="Remember me next time?" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_btn"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="32dp"
-        android:backgroundTint="#CD3F3A"
+        android:backgroundTint="@color/basicColor"
         android:text="@string/login"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="italic|bold"
-        app:cornerRadius="30sp"
-        app:icon="@drawable/person_svgrepo_com"
-        app:iconGravity="start"
-        app:iconSize="24dp" />
+        app:cornerRadius="12sp" />
 
     <TextView
         android:id="@+id/not_user_tv"
