--- a/Fitnessy/app/src/main/res/layout/activity_sign_up.xml
+++ b/Fitnessy/app/src/main/res/layout/activity_sign_up.xml
@@ -8,19 +8,30 @@
     android:orientation="vertical"
     tools:context=".auth.SignUpActivity">
 
-    <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/welcome" />
+    <ImageButton
+        android:id="@+id/arrowBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/arrow_back" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_marginTop="44dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:text="Create Account"
+        android:textColor="@color/black"
+        android:textSize="26sp"
+        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="54dp"
         android:inputType="textEmailAddress"
         app:endIconMode="clear_text">
 
@@ -72,17 +83,17 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sign_up_btn"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="32dp"
-        android:backgroundTint="#CD3F3A"
+        android:backgroundTint="@color/basicColor"
         android:text="@string/sign_up"
         android:textColor="#ECE7EA"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold|italic"
-        app:cornerRadius="30dp"
-        app:icon="@drawable/ic_person_add"
+        app:cornerRadius="12dp"
         app:iconGravity="start"
         app:iconSize="24dp" />
 
