--- a/Fitnessy/app/src/main/res/layout/activity_user_setup.xml
+++ b/Fitnessy/app/src/main/res/layout/activity_user_setup.xml
@@ -113,7 +113,7 @@
             android:drawableStart="@drawable/weight_icon"
             android:drawablePadding="12dp"
             android:hint="Weight"
-            android:inputType="textEmailAddress" />
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Height Input -->
@@ -136,7 +136,7 @@
             android:drawableStart="@drawable/height_icon"
             android:drawablePadding="12dp"
             android:hint="Height"
-            android:inputType="textEmailAddress" />
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <RadioGroup
@@ -279,11 +279,23 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="40dp"
+        android:background="@drawable/confirm_anim"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/confirm_anim" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/basicColor"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tWeightEtLay"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
